[workspace]
resolver = "2"
members = ["patronus", "patronus-egraphs", "tools/bmc", "tools/egraphs-cond-synth", "tools/sim"]

[workspace.package]
edition = "2021"
authors = ["Kevin Laeufer <laeufer@berkeley.edu>"]
repository = "https://github.com/cucapra/patronus"
readme = "Readme.md"
license = "BSD-3-Clause"
rust-version = "1.73.0"

[workspace.dependencies]
rustc-hash = "2.x"
baa = "0.14.5"
egg = "0.9.5"
rustc-hash = "2.0.0"
regex = "1.11.1"
ndarray = "0.15"
linfa = "0.7.0"
linfa-trees = "0.7.0"
csv = "1.1"
rustlearn = "0.5.0"
rustrees = "0.2.4"
rayon = "1.7.0"
pyo3-ffi = "0.18.1"
pyo3 = "0.18.1"
arrow = "37.0.0"
permutation = "0.4.1"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
easy-smt = "0.2.3"
clap =  { version = "4.x", features = ["derive"] }
patronus = {path = "patronus"}

# speed up execution of tests using insta
[profile.dev.package]
insta.opt-level = 3

# include debug information for profiling
[profile.release]
debug = true
